--- a/mod-sbo/src/main/resources/application.properties
+++ b/mod-sbo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name=mod-sbo
+server.port=8081
 
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/mod_sbo
+spring.datasource.username=retiv
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
