--- a/mod-sbo/pom.xml
+++ b/mod-sbo/pom.xml
@@ -111,6 +111,12 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+
 		<!-- end line for new dependencies above -->
 
 	</dependencies>
